feat: support touchpad panning

--- a/index.html
+++ b/index.html
@@ -97,7 +97,7 @@
                     </tr>
                     <tr>
                         <td>Erase</td>
-                        <td>Double tap and drag</td>
+                        <td>Not supported</td>
                         <td>shift + mouse drag</td>
                     </tr>
                     <tr>
@@ -114,6 +114,11 @@
                         <td>Settings</td>
                         <td>Open menu and then tap on setting</td>
                         <td>Open menu and then click on setting</td>
+                    </tr>
+                    <tr>
+                        <td>Move Canvas</td>
+                        <td>Two finger drag</td>
+                        <td>Ctrl + mouse drag or two finger drag on touchpad</td>
                     </tr>
                     <tr>
                         <td>Undo</td>
