--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <link rel="icon" href="images/favicon.ico" type="image/x-icon" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="theme-color" content="white"/>
-    <meta name="apple-mobile-web-app-capable" content="yes">
+    <meta name="mobile-web-app-capable" content="yes">
     <meta name="apple-mobile-web-app-status-bar-style" content="black">
     <meta name="apple-mobile-web-app-title" content="board">
     <meta name="msapplication-TileColor" content="#FFFFFF">
@@ -16,14 +16,6 @@
     <link rel="apple-touch-icon" sizes="180x180" href="images/apple-touch-icon.png">
     <link rel="icon" type="image/png" sizes="32x32" href="images/favicon-32x32.png">
     <link rel="icon" type="image/png" sizes="16x16" href="images/favicon-16x16.png">
-    <script>
-        function importJs(js) {
-            let element = document.createElement("script");
-            element.setAttribute("charset", "utf-8");
-            element.setAttribute("src", `./js/${js}.js?t=${new Date().getTime()}`);
-            document.getElementsByTagName("footer")[0].appendChild(element);
-        }
-    </script>
 </head>
 <body>
 <div id="first">
@@ -162,7 +154,7 @@
 <script src="config.js"></script>
 <script>
     document.getElementById("first").style.display = "none";
-    importJs("undo");
-    importJs("app");
 </script>
+<script src="js/undo.js"></script>
+<script src="js/app.js"></script>
 </html>
