feat: add multiple pen styles

--- a/index.html
+++ b/index.html
@@ -48,6 +48,9 @@
     </button>
     <select id="polygonSides" title="Polygon sides"></select>
     <input type="color" id="colorPicker" title="Color picker" />
+    <button class="icon pen-option" data-pen="pencil" title="Pencil">✏</button>
+    <button class="icon pen-option" data-pen="marker" title="Marker">🖊</button>
+    <button class="icon pen-option" data-pen="highlighter" title="Highlighter">🖍</button>
     <button onclick="menuItem(this)" content="setting" title="Settings" class="icon">⚙</button>
     <button onclick="menuItem(this)" content="help" title="Help" class="icon">❔</button>
     <button onclick="menuItem(this)" content="about" title="About" class="icon">ℹ</button>
