--- a/index.html
+++ b/index.html
@@ -159,5 +159,8 @@
     document.getElementById("first").style.display = "none";
 </script>
 <script src="js/undo.js"></script>
-<script src="js/app.js"></script>
+<script src="js/storage.js"></script>
+<script src="js/draw.js"></script>
+<script src="js/ui.js"></script>
+<script src="js/main.js"></script>
 </html>
