feat: improve toolbar design and persistence

--- a/index.html
+++ b/index.html
@@ -47,15 +47,14 @@
         <svg viewBox="0 0 24 24"><polygon points="12,2 22,12 12,22 2,12"/></svg>
     </button>
     <select id="polygonSides" title="Polygon sides"></select>
-    <input type="color" id="colorPicker" title="Color picker" />
+    <input type="color" id="colorPicker" title="Pen color" />
+    <input type="color" id="bgColorPicker" title="Background color" />
     <button class="icon pen-option" data-pen="pencil" title="Pencil">✏</button>
     <button class="icon pen-option" data-pen="marker" title="Marker">🖊</button>
     <button class="icon pen-option" data-pen="highlighter" title="Highlighter">🖍</button>
     <button onclick="menuItem(this)" content="setting" title="Settings" class="icon">⚙</button>
     <button onclick="menuItem(this)" content="help" title="Help" class="icon">❔</button>
     <button onclick="menuItem(this)" content="about" title="About" class="icon">ℹ</button>
-    <button onclick="menuItem(this)" content="download" title="Export" class="icon">⬇</button>
-    <button onclick="menuItem(this)" content="download-with-bg" title="Export with background" class="icon">⬇</button>
     <button onclick="menuItem(this)" content="download-pdf" title="Export as PDF" class="icon">📄</button>
     <button id="undo" onclick="menuItem(this)" content="undo" title="Undo" class="icon">↶</button>
     <button id="redo" onclick="menuItem(this)" content="redo" title="Redo" class="icon">↷</button>
